--- a/about.html
+++ b/about.html
@@ -16,7 +16,12 @@
     </ul>
     <header>
         <div>
-
+            <center>
+                <h2>#eat</h2>
+                <h2>#sleep</h2>
+                <h2>#code</h2>
+                <h2>#repeat</h2>
+            </center>
         </div>
     </header>
 </body>
