--- a/about.html
+++ b/about.html
@@ -2,28 +2,46 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="./index.css" </head>
+    <style>
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
-<body>
-    <ul>
-        <li><a href="./index.html">home</a></li>
-        <li><a href="./news.html">news</a></li>
-        <li><a href="./about.html">about</a></li>
-    </ul>
-    <header>
-        <div>
-            <center>
-                <h2>#eat</h2>
-                <h2>#sleep</h2>
-                <h2>#code</h2>
-                <h2>#repeat</h2>
-            </center>
-        </div>
-    </header>
-</body>
+    <body>
+        <nav>
+            <h3>
+                <a class="navmenu" href="./index.html">home</a>
+            </h3>
+            <h3>
+                <a class="navmenu" href="./news.html">news</a>
+            </h3>
+            <h3>
+                <a class="navmenu" href="./about.html">about</a>
+            </h3>
+            <div class="field">
+                <label></label>
+                <input type="text" name="Search" placeholder="Search" />
+            </div>
+        </nav>
+        <div class="footer">copyright@dean2019mks</div>
+        <header>
+            <div>
+                <center>
+                    <h1>#eat</h1>
+                    <h1>#sleep</h1>
+                    <h1>#code</h1>
+                    <h2>#repeat</h2>
+                </center>
+            </div>
+        </header>
+    </body>
 
 </html>
