--- a/index.html
+++ b/index.html
@@ -2,23 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
+    <style>
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <ul>
-        <li><a href="./index.html">home</a></li>
-        <li><a href="./news.html">news</a></li>
-        <li><a href="./about.html">about</a></li>
-    </ul>
-    <header>
-        <div>
+    <nav>
+        <h3>
+            <a class="navmenu" href="./index.html">home</a>
+        </h3>
+        <h3>
+            <a class="navmenu" href="./news.html">news</a>
+        </h3>
+        <h3>
+            <a class="navmenu" href="./about.html">about</a>
+        </h3>
 
+        <div class="field">
+            <label></label>
+            <input type="text" name="Search" placeholder="Search" />
         </div>
-    </header>
+    </nav>
+    <div class="footer">copyright@dean2019mks</div>
+    <header></header>
 </body>
 
 </html>
