--- a/news.html
+++ b/news.html
@@ -2,28 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
+    <style>
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
     <nav>
-        <ul>
-            <li><a href="./index.html">home</a></li>
-            <li><a href="">news</a></li>
-            <li><a href="">about</a></li>
-        </ul>
+        <h3>
+            <a class="navmenu" href="./index.html">home</a></<a>
+        </h3>
+        <h3>
+            <a class="navmenu" href="./news.html">news</a></<a>
+        </h3>
+        <h3>
+            <a class="navmenu" href="./about.html">about</a></<a>
+        </h3>
+        <div class="field">
+            <label></label>
+            <input type="text" name="Search" placeholder="Search" />
+        </div>
     </nav>
+    <div class="footer">copyright@dean2019mks</div>
     <header>
         <div>
             <center>
-                <h1>hari ini sampai 2 bulan kedepan
+                <h1>
+                    hari ini sampai 2 bulan kedepan
+
                     <p>saya belajar javascript</p>
                 </h1>
             </center>
         </div>
+
     </header>
 </body>
 
