--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
         </nav>
         <div class="footer">copyright@dean2019mks</div>
         <header>
-            <div>
-                <center>
-                    <h1>#eat</h1>
-                    <h1>#sleep</h1>
-                    <h1>#code</h1>
-                    <h2>#repeat</h2>
-                </center>
+            <div></div>
+            <center>
+                <h1><a href="https://twitter.com/imanardiansyahh">#eat,</a></h1>
+                <h1><a href="https://www.instagram.com/imanardiansyahh/?hl=id">#sleep</a></h1>
+                <h1><a href="https://impactbyte.com/">#code</a></h1>
+                <h2><a href="./about.html">#repeat</a></h2>
+            </center>
             </div>
         </header>
     </body>
